# PFASST

./: .astylerc  .dir-locals.el  .gitignore  .mailmap  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated.js  classes.html  dir_000001_000006.html  dir_000002_000003.html  dir_000002_000006.html  dir_000003_000006.html  dir_000004_000006.html  dir_000005_000006.html  dir_000006_000007.html  dir_000006_000012.html  dir_000006_000013.html  dir_000006_000014.html  dir_000006_000015.html  dir_000007_000009.html  dir_000007_000011.html  dir_000008_000011.html  dir_000009_000011.html  dir_000010_000011.html  dir_000011_000007.html  dir_000011_000008.html  dir_000011_000009.html  dir_000011_000010.html  dir_000012_000006.html  dir_000013_000006.html  dir_000014_000006.html  dir_000015_000006.html  dir_000016_000022.html  dir_000017_000006.html  dir_000018_000006.html  (+262 more)
cmake/: FindBoost.cmake  FindEasylogging++.cmake  FindEasyloggingpp.cmake  FindEigen3.cmake  FindFFTW.cmake  FindGMock.cmake  FindMPIP.cmake  FindScoreP.cmake  cc_wrapper.sh.in  cxx_wrapper.sh.in  scorep-cc.sh.in  scorep-cxx.sh.in  site_config.hpp.in  toolchain_juqueen.cmake  utility_functions.cmake
etc/: default_logging.conf
examples/: CMakeLists.txt
examples/ad/: CMakeLists.txt  main.cpp
examples/advec_diff/: CMakeLists.txt  advec_diff_mlsdc.cpp  advec_diff_pfasst.cpp  advec_diff_sdc.cpp  advec_diff_sweeper.hpp  advec_diff_sweeper_impl.hpp
examples/advection_diffusion/: CMakeLists.txt  Makefile  Makefile.edison  README.md  advec_diff_mpi.cpp  advec_diff_sdc.cpp  advec_diff_sweeper.hpp  advec_diff_sweeper_impl.hpp  advection_diffusion.cpp  advection_diffusion_sweeper.hpp  ex1.cpp  ex2.cpp  ex3.cpp  fft.hpp  fft_manager.hpp  fft_manager_impl.hpp  fftw_manager.hpp  fftw_manager_impl.hpp  fftw_workspace.hpp  fftw_workspace_dft1d.hpp  fftw_workspace_dft1d_impl.hpp  fftw_workspace_impl.hpp  mpi_pfasst.cpp  serial_mlsdc.cpp  serial_mlsdc_autobuild.cpp  spectral_transfer_1d.hpp  vanilla_sdc.cpp
examples/boris/: Boris_SDC_Plots.ipynb  CMakeLists.txt  README.md  boris_analyse.py  boris_mlsdc.cpp  boris_pfasst.cpp  boris_sdc.cpp  boris_sweeper.hpp  boris_sweeper_impl.hpp  injective_transfer.hpp  particle.hpp  particle_2d.hpp  particle_3d.hpp  particle_cloud.hpp  particle_cloud_impl.hpp  particle_impl.hpp  particle_util.hpp  particle_util_impl.hpp  physics.hpp  simple_physics.hpp
examples/boris/bindings/: CMakeLists.txt  simple_physics_solver.cpp  simple_physics_solver.hpp  wrapper_interface.hpp  wrapper_simple_physics_solver.hpp  wrapper_simple_physics_solver_impl.hpp
examples/heat1d/: CMakeLists.txt  heat1d_mlsdc.cpp  heat1d_pfasst.cpp  heat1d_sdc.cpp  heat1d_sweeper.hpp  heat1d_sweeper_impl.hpp
examples/scalar/: CMakeLists.txt  README.md  scalar_sdc.cpp  scalar_sweeper.hpp
examples/vanderpol/: CMakeLists.txt  README.md  plot.py  vdp_sdc.cpp  vdp_sweeper.hpp
include/: CMakeLists.txt  pfasst.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+134 more)
src/: CMakeLists.txt  pfasst-controller.hpp  pfasst-encapsulated.hpp  pfasst-imex.hpp  pfasst-interfaces.hpp  pfasst-mlsdc.hpp  pfasst-pfasst.hpp  pfasst-quadrature.hpp  pfasst-sdc.hpp  pfasst-vector.hpp  pfasst.hpp
src/pfasst/: config_impl.hpp  exceptions_impl.hpp  interfaces_impl.hpp  mpi_communicator_impl.hpp
src/pfasst/comm/: communicator_impl.hpp  interface_impl.hpp  mpi_p2p_impl.hpp
src/pfasst/contrib/: fft_impl.hpp
src/pfasst/contrib/encap/: particle_cloud_impl.hpp  particle_impl.hpp  particle_util_impl.hpp
src/pfasst/contrib/sweeper/: boris_sweeper_impl.hpp
src/pfasst/controller/: controller_impl.hpp  interface_impl.hpp  mlsdc_impl.hpp  pfasst_impl.hpp  sdc_impl.hpp  status_impl.hpp  two_level_mlsdc_impl.hpp  two_level_pfasst_impl.hpp
src/pfasst/encap/: encap_sweeper_impl.hpp  encapsulation_impl.hpp  imex_sweeper_impl.hpp  implicit_sweeper_impl.hpp  interface_impl.hpp  mpi_vector_impl.hpp  poly_interp_impl.hpp  vector_impl.hpp
src/pfasst/quadrature/: clenshaw_curtis_impl.hpp  gauss_legendre_impl.hpp  gauss_lobatto_impl.hpp  gauss_radau_impl.hpp  interface_imp.hpp  interface_impl.hpp  polynomial_impl.hpp  quadrature_impl.hpp
src/pfasst/sweeper/: imex_impl.hpp  interface_impl.hpp  sweeper_impl.hpp
src/pfasst/transfer/: interface_impl.hpp  polynomial_impl.hpp  spectral_1d_impl.hpp  transfer_impl.hpp
tests/: CMakeLists.txt  Makefile  Makefile.tests  test-advection-diffusion.cpp  test-quadrature.cpp  test-sdc.cpp  test_exceptions.cpp  test_logging.cpp  test_polynomial.cpp  test_quadrature.cpp
tests/comm/: mocks.hpp
tests/contrib/: CMakeLists.txt  test_fft.cpp
tests/controller/: CMakeLists.txt  mocks.hpp  test_controller.cpp  test_sdc.cpp  test_status.cpp  test_two_level_mlsdc.cpp  test_two_level_pfasst.cpp
tests/encap/: CMakeLists.txt  test_encapsulation_vector.cpp  test_factory.cpp
tests/examples/: CMakeLists.txt  Makefile
tests/examples/advection_diffusion/: CMakeLists.txt  Makefile  test_advection_diffusion.cpp  test_advection_diffusion_conv.cpp  test_mpi_advection_diffusion.cpp  test_mpi_advection_diffusion_conv.cpp
tests/examples/boris/: CMakeLists.txt  mocks.hpp  test_boris_particle.cpp  test_boris_particle_util.cpp  test_boris_physics.cpp  test_boris_sweeper.cpp
tests/examples/heat1d/: CMakeLists.txt  test_heat1d_sweeper.cpp
tests/examples/scalar/: CMakeLists.txt  Makefile  test_scalar.cpp  test_scalar_conv.cpp  test_scalar_highprec.cpp
tests/examples/vanderpol/: CMakeLists.txt  Makefile  test_vdp_zeronu_conv.cpp
tests/fixtures/: concepts.hpp  test_helpers.hpp
tests/quadrature/: CMakeLists.txt  mocks.hpp  test_polynomial.cpp  test_quadrature.cpp
tests/sweeper/: CMakeLists.txt  mocks.hpp  test_imex.cpp  test_sweeper.cpp
tests/transfer/: CMakeLists.txt  mocks.hpp  test_polynomial_transfer.cpp  test_spectral_1d.cpp  test_transfer.cpp
(+1592 files in other folders)
